force-app/main/default/objects/Holders_Product_Narrowing__c/Holders_Product_Narrowing__c.object-meta.xml
<CustomObject>
    <label>Holders Product Narrowing</label>
    <nameField>
        <displayFormat>HPN# {000000}</displayFormat>
        <label>Holders Product Narrowing #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Holders Product Narrowing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>