force-app/main/default/objects/Holders_Product_Narrowing__c/fields/China_ML__c.field-meta.xml
<CustomField>
    <fullName>China_ML__c</fullName>
    <defaultValue>false</defaultValue>
    <label>China ML</label>
    <type>Checkbox</type>
</CustomField>