force-app/main/default/objects/Holders_Product_Narrowing__c/fields/CU_TR__c.field-meta.xml
<CustomField>
    <fullName>CU_TR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CU TR</label>
    <type>Checkbox</type>
</CustomField>