force-app/main/default/objects/Holders_Product_Narrowing__c/fields/HolderProduct__c.field-meta.xml
<CustomField>
    <fullName>HolderProduct__c</fullName>
    <label>HolderProduct</label>
    <length>255</length>
    <type>Text</type>
</CustomField>