force-app/main/default/objects/Holders_Product_Narrowing__c/fields/NACE__c.field-meta.xml
<CustomField>
    <fullName>NACE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NACE</label>
    <type>Checkbox</type>
</CustomField>