force-app/main/default/objects/Holders_Product_Narrowing__c/fields/STC_Desc__c.field-meta.xml
<CustomField>
    <fullName>STC_Desc__c</fullName>
    <label>STC Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>