force-app/main/default/objects/Holders_Product_Narrowing__c/fields/SZC__c.field-meta.xml
<CustomField>
    <fullName>SZC__c</fullName>
    <label>SZC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>