force-app/main/default/objects/Holders_Product_Narrowing__c/fields/X3A__c.field-meta.xml
<CustomField>
    <fullName>X3A__c</fullName>
    <defaultValue>false</defaultValue>
    <label>3A</label>
    <type>Checkbox</type>
</CustomField>